--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "npm run dev"
   },
   "dependencies": {
-    "live-server": "1.2.1"
+    "live-server": "^1.2.0"
   },
   "engines": {
     "npm": ">5"
